sumo/tests/sumo/extended/emitter/errors/vtypedist/false_id/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: MSTriggeredSource emitter: Vehicle type 'xxx' does not exist.
Quitting (on error).
